--- a/suppliers/templates/supplier_list.html
+++ b/suppliers/templates/supplier_list.html
@@ -8,7 +8,7 @@ SGE - Marcas
 
 <div class="row mb-3">
     <div class="col-md-6">
-        <form method="get" action="{% url 'brand_list' %}">
+        <form method="get" action="{% url 'supplier_list' %}">
             <div class="input-group">
                 <input type="text" class="form-control" name="name" placeholder="Nome" value="{{ request.GET.name }}">
                 <button type="submit" class="btn btn-primary">
@@ -19,8 +19,8 @@ SGE - Marcas
         </form>
     </div>
     <div class="col-md-6">
-        <a href="{% url 'brand_create' %}" class="btn btn-success float-end">
-            <i class="bi bi-plus">Nova Marca</i>
+        <a href="{% url 'supplier_create' %}" class="btn btn-success float-end">
+            <i class="bi bi-plus">Novo Fornecedor</i>
         </a>
     </div>
 </div>
@@ -36,21 +36,21 @@ SGE - Marcas
             </tr>
         </thead>
         <tbody>
-            {% for brand in brands %}
+            {% for supplier in suppliers %}
             <tr>
-                <td>{{brand.id}}</td>
-                <td>{{brand.name}}</td>
-                <td>{{brand.description}}</td>
+                <td>{{supplier.id}}</td>
+                <td>{{supplier.name}}</td>
+                <td>{{supplier.description}}</td>
                 <td>
-                    <a href="{% url 'brand_detail' brand.id %}" class="btn btn-info btn-sm">
+                    <a href="{% url 'supplier_detail' supplier.id %}" class="btn btn-info btn-sm">
                         <i class="bi bi-eye"></i>
                     </a>
 
-                    <a href="{% url 'brand_update' brand.id %}" class="btn btn-warning btn-sm">
+                    <a href="{% url 'supplier_update' supplier.id %}" class="btn btn-warning btn-sm">
                         <i class="bi bi-pencil"></i>
                     </a>
 
-                    <a href="{% url 'brand_delete' brand.id %}" class="btn btn-danger btn-sm">
+                    <a href="{% url 'supplier_delete' supplier.id %}" class="btn btn-danger btn-sm">
                         <i class="bi bi-trash"></i>
                     </a>
                 </td>
