--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -9,7 +9,7 @@
     {% include 'components/_product_metrics.html' %}
     {% include 'components/_sales_metrics.html' %}
 
-    <script src="https://cdn.jsdeliver.net/npm/chart.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@4.5.1/dist/chart.umd.min.js"></script>
 
     <div class="row mt-4 justify-content-center">
         <div class="col-md-6 text-center">
